[gd_scene load_steps=17 format=3 uid="uid://on6jkoekl6ei"]

[ext_resource type="Script" path="res://entities/cucumber/cucumber.gd" id="1_1spqs"]
[ext_resource type="Texture2D" uid="uid://cmxgl1shdb5uq" path="res://assets/tileset.png" id="2_0peok"]
[ext_resource type="Script" path="res://general_purpose/utils/anim.gd" id="3_us7lj"]
[ext_resource type="Script" path="res://general_purpose/damage/deal_damage_area.gd" id="4_ib1g3"]
[ext_resource type="Script" path="res://general_purpose/damage/rcv_damage_area.gd" id="5_044ft"]

[sub_resource type="Animation" id="Animation_ysbpd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rotate/cucumber:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(48, 40, 16, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rotate/cucumber:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rotate/top:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("rotate/top:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("rotate/top:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ijj0r"]
resource_name = "chase"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rotate/cucumber:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(96, 40, 16, 24), Rect2(112, 40, 16, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rotate/cucumber:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vsccc"]
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rotate/cucumber:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(128, 40, 16, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rotate/cucumber:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6vdvg"]
resource_name = "patrol"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rotate/cucumber:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(48, 40, 16, 24), Rect2(64, 40, 16, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rotate/cucumber:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_2gfko"]
resource_name = "sight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rotate/cucumber:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(208, 0, 16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rotate/cucumber:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.9, 1.3), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_au3ia"]
resource_name = "break"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rotate/cucumber:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(80, 40, 16, 24), Rect2(128, 40, 16, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rotate/cucumber:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 0.8), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rotate/top:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("rotate/top:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(2, -7), Vector2(8, -12), Vector2(17, -4), Vector2(19, -5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("rotate/top:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.523935, 0.880675, 1.14727, 1.5708]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_break_blast"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f5oka"]
_data = {
"RESET": SubResource("Animation_ysbpd"),
"break": SubResource("Animation_au3ia"),
"chase": SubResource("Animation_ijj0r"),
"dead": SubResource("Animation_vsccc"),
"patrol": SubResource("Animation_6vdvg"),
"sight": SubResource("Animation_2gfko")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdxk1"]
size = Vector2(6, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rbln"]
size = Vector2(6, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hga6"]
size = Vector2(12, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fknu"]
size = Vector2(12, 4)

[node name="cucumber" type="Node2D"]
z_index = -1
script = ExtResource("1_1spqs")

[node name="rotate" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="cucumber" type="Sprite2D" parent="rotate"]
texture = ExtResource("2_0peok")
offset = Vector2(0, -11)
region_enabled = true
region_rect = Rect2(48, 40, 16, 24)
metadata/_edit_lock_ = true

[node name="top" type="Sprite2D" parent="rotate"]
visible = false
position = Vector2(0, -4)
texture = ExtResource("2_0peok")
offset = Vector2(0, -11)
region_enabled = true
region_rect = Rect2(80, 40, 16, 16)

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f5oka")
}
script = ExtResource("3_us7lj")

[node name="DealDamageArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource("4_ib1g3")
metadata/_edit_lock_ = true

[node name="damage_collision" type="CollisionShape2D" parent="DealDamageArea"]
visible = false
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_tdxk1")
metadata/_edit_lock_ = true

[node name="damage_collision_break" type="CollisionShape2D" parent="DealDamageArea"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_0rbln")
disabled = true
metadata/_edit_lock_ = true

[node name="RcvDamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024
script = ExtResource("5_044ft")

[node name="rcv_damage_collision" type="CollisionShape2D" parent="RcvDamageArea"]
visible = false
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_3hga6")

[node name="rcv_damage_collision_break" type="CollisionShape2D" parent="RcvDamageArea"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_5fknu")
disabled = true
